MFG Ready Version/force-app/main/default/objects/Case/fields/mfg_ConvertedClaimId__c.field-meta.xml
<CustomField>
    <fullName>mfg_ConvertedClaimId__c</fullName>
    <label>ConvertedClaimId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>