MFG Ready Version/force-app/main/default/objects/Case/fields/mfg_ConvertedDate__c.field-meta.xml
<CustomField>
    <fullName>mfg_ConvertedDate__c</fullName>
    <label>ConvertedDate</label>
    <type>Date</type>
</CustomField>