MFG Ready Version/force-app/main/default/objects/Case/fields/mfg_Location__c.field-meta.xml
<CustomField>
    <fullName>mfg_Location__c</fullName>
    <label>Location</label>
    <type>Address</type>
</CustomField>