MFG Ready Version/force-app/main/default/objects/Case/fields/mfg_Preferred_Service_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>mfg_Preferred_Service_Date_Time__c</fullName>
    <label>Preferred Service Date/Time</label>
    <type>DateTime</type>
</CustomField>