MFG Ready Version/force-app/main/default/objects/Case/fields/mfg_Quantity__c.field-meta.xml
<CustomField>
    <fullName>mfg_Quantity__c</fullName>
    <label>Quantity</label>
    <summarizedField>mfg_Case_Line_Item__c.mfg_Quantity__c</summarizedField>
    <summaryForeignKey>mfg_Case_Line_Item__c.mfg_Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>